force-app/main/default/objects/FinancialAccount/fields/Cheque_Bounce_count__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Bounce_count__c</fullName>
    <label>Cheque Bounce count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>