force-app/main/default/objects/FinancialAccount/fields/Current_NPA_Stage__c.field-meta.xml
<CustomField>
    <fullName>Current_NPA_Stage__c</fullName>
    <label>Current NPA Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Write-Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>