force-app/main/default/objects/FinancialAccount/fields/Debt_type__c.field-meta.xml
<CustomField>
    <fullName>Debt_type__c</fullName>
    <label>Debt type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit card debt</fullName>
            </value>
            <value>
                <fullName>Personal loan debt</fullName>
            </value>
            <value>
                <fullName>Business debt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>