force-app/main/default/objects/FinancialAccount/fields/Disbursal_Date__c.field-meta.xml
<CustomField>
    <fullName>Disbursal_Date__c</fullName>
    <label>Disbursal Date</label>
    <type>Date</type>
</CustomField>