force-app/main/default/objects/FinancialAccount/fields/JointOwner__c.field-meta.xml
<CustomField>
    <fullName>JointOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>JointOwner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial Accounts Orignals</relationshipLabel>
    <relationshipName>Financial_Accounts_Orignals</relationshipName>
    <type>Lookup</type>
</CustomField>