force-app/main/default/objects/FinancialAccount/fields/Last_EMI_Amount__c.field-meta.xml
<CustomField>
    <fullName>Last_EMI_Amount__c</fullName>
    <label>Last EMI Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>