force-app/main/default/objects/FinancialAccount/fields/Last_EMI_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_EMI_Date__c</fullName>
    <label>Last EMI Date</label>
    <type>Date</type>
</CustomField>