force-app/main/default/objects/FinancialAccount/fields/Next_EMI_Amount__c.field-meta.xml
<CustomField>
    <fullName>Next_EMI_Amount__c</fullName>
    <label>Next EMI Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>