force-app/main/default/objects/FinancialAccount/fields/Next_EMI_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_EMI_Date__c</fullName>
    <label>Next EMI Date</label>
    <type>Date</type>
</CustomField>