force-app/main/default/objects/FinancialAccount/fields/PrimaryOwner__c.field-meta.xml
<CustomField>
    <fullName>PrimaryOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PrimaryOwner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial Accounts Orignals (PrimaryOwner)</relationshipLabel>
    <relationshipName>Financial_Accounts_Orignals1</relationshipName>
    <type>Lookup</type>
</CustomField>