force-app/main/default/objects/FinancialAccount/fields/Shortfall_Flag__c.field-meta.xml
<CustomField>
    <fullName>Shortfall_Flag__c</fullName>
    <label>Shortfall Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shortfall</fullName>
            </value>
            <value>
                <fullName>SF- Profit</fullName>
            </value>
            <value>
                <fullName>SF- Settled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>